force-app/main/default/objects/Quotation__c/fields/NDIA_Primary_Owner__c.field-meta.xml
<CustomField>
    <fullName>NDIA_Primary_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NDIA Primary Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Quotations</relationshipName>
    <type>Lookup</type>
</CustomField>