force-app/main/default/objects/Quotation__c/fields/NDIAAre_you_sure_you_want_to_submit__c.field-meta.xml
<CustomField>
    <fullName>NDIAAre_you_sure_you_want_to_submit__c</fullName>
    <label>Are you sure you want to submit?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>