force-app/main/default/objects/Quotation__c/fields/NDIAByPassValidation__c.field-meta.xml
<CustomField>
    <fullName>NDIAByPassValidation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to bypass validation for manual change used in validation rules</description>
    <label>By Pass Validation</label>
    <type>Checkbox</type>
</CustomField>