force-app/main/default/objects/Quotation__c/fields/NDIAIndexation__c.field-meta.xml
<CustomField>
    <fullName>NDIAIndexation__c</fullName>
    <label>Indexation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>