force-app/main/default/objects/Quotation__c/fields/NDIANDIS_Number__c.field-meta.xml
<CustomField>
    <fullName>NDIANDIS_Number__c</fullName>
    <formula>NDIAAccount__r.NDIANDISNumber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NDIS Number</label>
    <type>Text</type>
</CustomField>