force-app/main/default/objects/Quotation__c/fields/NDIANDISNumber__c.field-meta.xml
<CustomField>
    <fullName>NDIANDISNumber__c</fullName>
    <label>NDISNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>