force-app/main/default/objects/Quotation__c/fields/NDIANDISParticipant__c.field-meta.xml
<CustomField>
    <fullName>NDIANDISParticipant__c</fullName>
    <formula>NDIAAccount__r.NDIANDISParticipant__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NDIS Participant</label>
    <type>Checkbox</type>
</CustomField>