force-app/main/default/objects/Quotation__c/fields/NDIAPartcipantName__c.field-meta.xml
<CustomField>
    <fullName>NDIAPartcipantName__c</fullName>
    <description>Participant name</description>
    <formula>NDIAAccount__r.Name  &amp; &quot; - &quot; &amp;  Name</formula>
    <label>Participant Name</label>
    <type>Text</type>
</CustomField>