force-app/main/default/objects/Quotation__c/fields/NDIAQuotePlanEndDate__c.field-meta.xml
<CustomField>
    <fullName>NDIAQuotePlanEndDate__c</fullName>
    <label>Quote Plan End Date</label>
    <type>Date</type>
</CustomField>