force-app/main/default/objects/Quotation__c/fields/NDIAQuoteType__c.field-meta.xml
<CustomField>
    <fullName>NDIAQuoteType__c</fullName>
    <label>Quote Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SIL</fullName>
            </value>
            <value>
                <fullName>Assistive Technology</fullName>
            </value>
            <value>
                <fullName>Home Modifications</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>