force-app/main/default/objects/Quotation__c/fields/NDIAWeeklyApprovedAmount__c.field-meta.xml
<CustomField>
    <fullName>NDIAWeeklyApprovedAmount__c</fullName>
    <label>Weekly Approved Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>