force-app/main/default/objects/Quotation__c/fields/NDIAWeeklyQuotedAmount__c.field-meta.xml
<CustomField>
    <fullName>NDIAWeeklyQuotedAmount__c</fullName>
    <label>Weekly Quoted Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>