force-app/main/default/objects/Quotation__c/validationRules/Indexation_Less_Than_5.validationRule-meta.xml
<ValidationRule>
    <fullName>Indexation_Less_Than_5</fullName>
    <active>false</active>
    <description>Indexation should be less than 5 %</description>
    <errorConditionFormula>NDIAIndexation__c &gt; 5.00</errorConditionFormula>
    <errorMessage>Caution : You have entered an amount above 5%</errorMessage>
</ValidationRule>