force-app/main/default/objects/Quotation__c/validationRules/NDIAAllowNotYetCommToInProgress.validationRule-meta.xml
<ValidationRule>
    <fullName>NDIAAllowNotYetCommToInProgress</fullName>
    <active>true</active>
    <description>stage can only be manually updated from &#39;Not yet commenced&#39; to &#39;In progress&#39;</description>
    <errorConditionFormula>AND(
ISPICKVAL(PRIORVALUE(NDIAQuoteStage__c), &quot;Not yet commenced&quot;),
ISPICKVAL(NDIAQuoteStage__c, &quot;Final&quot;) 
)  ||
AND(
ISPICKVAL(PRIORVALUE(NDIAQuoteStage__c), &quot;Not yet commenced&quot;),
ISPICKVAL(NDIAQuoteStage__c, &quot;Recall&quot;) 
) ||
AND(
ISPICKVAL(PRIORVALUE(NDIAQuoteStage__c), &quot;Not yet commenced&quot;),
ISPICKVAL(NDIAQuoteStage__c, &quot;Submitted&quot;) 
) ||
AND(
ISPICKVAL(PRIORVALUE(NDIAQuoteStage__c), &quot;Not yet commenced&quot;),
ISPICKVAL(NDIAQuoteStage__c, &quot;Approval In Progress&quot;) 
) ||
AND(
ISPICKVAL(PRIORVALUE(NDIAQuoteStage__c), &quot;Not yet commenced&quot;),
ISPICKVAL(NDIAQuoteStage__c, &quot;Approved&quot;) 
) ||
AND(
ISPICKVAL(PRIORVALUE(NDIAQuoteStage__c), &quot;Not yet commenced&quot;),
ISPICKVAL(NDIAQuoteStage__c, &quot;Rejected&quot;)
)</errorConditionFormula>
    <errorDisplayField>NDIAQuoteStage__c</errorDisplayField>
    <errorMessage>Stage can only be manually updated from &#39;Not Yet Commenced&#39; to &#39;In progress&#39; or &#39;Archive&#39;</errorMessage>
</ValidationRule>