force-app/main/default/objects/Quotation__c/validationRules/NDIAAllowRejectedToSubmitted.validationRule-meta.xml
<ValidationRule>
    <fullName>NDIAAllowRejectedToSubmitted</fullName>
    <active>true</active>
    <description>only allow stage updation from &#39;Rejected&#39; to &#39;Submitted&#39; and &#39;Archive&#39;</description>
    <errorConditionFormula>AND(
ISPICKVAL(PRIORVALUE(NDIAQuoteStage__c), &quot;Rejected&quot;),
ISPICKVAL(NDIAQuoteStage__c, &quot;Not yet commenced&quot;) 
)  ||
AND(
ISPICKVAL(PRIORVALUE(NDIAQuoteStage__c), &quot;Rejected&quot;),
ISPICKVAL(NDIAQuoteStage__c, &quot;In progress&quot;) 
) ||
AND(
ISPICKVAL(PRIORVALUE(NDIAQuoteStage__c), &quot;Rejected&quot;),
ISPICKVAL(NDIAQuoteStage__c, &quot;Final&quot;) 
) ||
AND(
ISPICKVAL(PRIORVALUE(NDIAQuoteStage__c), &quot;Rejected&quot;),
ISPICKVAL(NDIAQuoteStage__c, &quot;Recall&quot;) 
) ||
AND(
ISPICKVAL(PRIORVALUE(NDIAQuoteStage__c), &quot;Rejected&quot;),
ISPICKVAL(NDIAQuoteStage__c, &quot;Approval In Progress&quot;) 
) ||
AND(
ISPICKVAL(PRIORVALUE(NDIAQuoteStage__c), &quot;Rejected&quot;),
ISPICKVAL(NDIAQuoteStage__c, &quot;Approved&quot;) 
)</errorConditionFormula>
    <errorDisplayField>NDIAQuoteStage__c</errorDisplayField>
    <errorMessage>stage can be manually updated from &#39;Rejected&#39; to only &#39;Submitted&#39; or &#39;Archive&#39;</errorMessage>
</ValidationRule>