force-app/main/default/objects/Quotation__c/validationRules/NDIARestrictionOnSubmission.validationRule-meta.xml
<ValidationRule>
    <fullName>NDIARestrictionOnSubmission</fullName>
    <active>true</active>
    <description>From &#39;Submitted&#39; stage can be manually updated to &#39;Recall / Rejected / Approved&#39; or &#39;Archive&#39;</description>
    <errorConditionFormula>AND($Profile.Name &lt;&gt; &quot;System Administrator&quot;,AND($Profile.Name = &quot;Quotation&quot;,
AND(
ISPICKVAL(PRIORVALUE(NDIAQuoteStage__c), &quot;Submitted&quot;),
ISPICKVAL(NDIAQuoteStage__c, &quot;Final&quot;) 
)  ||
AND(
ISPICKVAL(PRIORVALUE(NDIAQuoteStage__c), &quot;Submitted&quot;),
ISPICKVAL(NDIAQuoteStage__c, &quot;In progress&quot;) 
) ||
AND(
ISPICKVAL(PRIORVALUE(NDIAQuoteStage__c), &quot;Submitted&quot;),
ISPICKVAL(NDIAQuoteStage__c, &quot;Not yet commenced&quot;) 
) ||
AND(
ISPICKVAL(PRIORVALUE(NDIAQuoteStage__c), &quot;Submitted&quot;),
ISPICKVAL(NDIAQuoteStage__c, &quot;Approval In Progress&quot;) 
)
)
)</errorConditionFormula>
    <errorDisplayField>NDIAQuoteStage__c</errorDisplayField>
    <errorMessage>Stage can be manually updated from &#39;Submitted&#39; to &#39;Recall / Rejected / Approved&#39; or &#39;Archive&#39;</errorMessage>
</ValidationRule>