force-app/main/default/objects/Quotation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>NDIAPartcipantName__c</columns>
    <columns>NDIAApprovalDate__c</columns>
    <columns>NDIAAccount__c</columns>
    <columns>NDIANDIS_Number__c</columns>
    <columns>NDIAQuoteStage__c</columns>
    <columns>NDIAQuoteType__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>