force-app/main/default/objects/Quotation__c/listViews/Archived_Quotes.listView-meta.xml
<ListView>
    <fullName>Archived_Quotes</fullName>
    <columns>NAME</columns>
    <columns>NDIAPartcipantName__c</columns>
    <columns>NDIAAccount__c</columns>
    <columns>NDIA_Primary_Owner__c</columns>
    <columns>NDIANDISNumber__c</columns>
    <columns>NDIAQuoteStage__c</columns>
    <columns>NDIAQuoteType__c</columns>
    <columns>NDIAQuotePlanEndDate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NDIAQuoteStage__c</field>
        <operation>equals</operation>
        <value>Archive</value>
    </filters>
    <label>Archived Quotes</label>
</ListView>