force-app/main/default/objects/Quotation__c/listViews/My_Quotes.listView-meta.xml
<ListView>
    <fullName>My_Quotes</fullName>
    <columns>NAME</columns>
    <columns>NDIAApprovalDate__c</columns>
    <columns>NDIAAccount__c</columns>
    <columns>NDIA_Primary_Owner__c</columns>
    <columns>NDIANDIS_Number__c</columns>
    <columns>NDIAQuoteStage__c</columns>
    <columns>NDIAQuoteType__c</columns>
    <columns>NDIAQuotePlanEndDate__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Quotes</label>
</ListView>