force-app/main/default/objects/Quotation__c/listViews/NDIA_Quotation.listView-meta.xml
<ListView>
    <fullName>NDIA_Quotation</fullName>
    <columns>NAME</columns>
    <columns>NDIAAccount__c</columns>
    <columns>NDIA_Primary_Owner__c</columns>
    <columns>NDIANDIS_Number__c</columns>
    <columns>NDIAQuoteStage__c</columns>
    <columns>NDIAQuoteType__c</columns>
    <columns>NDIAQuotePlanEndDate__c</columns>
    <filterScope>Queue</filterScope>
    <label>NDIA</label>
    <queue>NDIA</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>