force-app/main/default/objects/Quotation__c/listViews/Submitted_Quotes.listView-meta.xml
<ListView>
    <fullName>Submitted_Quotes</fullName>
    <columns>NAME</columns>
    <columns>NDIAAccount__c</columns>
    <columns>NDIANDISParticipant__c</columns>
    <columns>NDIAQuoteStage__c</columns>
    <columns>NDIAQuoteType__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NDIAQuoteStage__c</field>
        <operation>equals</operation>
        <value>Submitted</value>
    </filters>
    <label>Submitted Quotes</label>
    <sharedTo>
        <group>NDIA_USER</group>
    </sharedTo>
</ListView>